--- a/blog-website/style.css
+++ b/blog-website/style.css
@@ -1,85 +1,97 @@
-*{
+body{
+    font-family: cursive;
+    background-color: #121212;
+    color: #E0E0E0;
+}
+h1{
+    font-family: cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    display: flex;
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin-bottom: 20px;
+    color: #E0E0E0;
 }
-body,html{
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    color: white;
-    font-family: 'Arial', sans-serif;
+h1:hover{
+
+    text-shadow: 0px 5px 15px rgba(72, 202, 228, 0.7);;
 }
-nav{
+.nav{
     display: flex;
-    margin: 5rem;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    gap: 25%;
+    font-size: 20px;
 }
-nav a{
+a{
     text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: 800;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-nav a:hover{
-    background-color: rgba(255, 255, 255, 0.1);
-}
-hr{
-    width: 80%;
-    margin: 2rem auto;
-    border: none;
-    height: 1px;
-    background-color: white;
-}
-header{
+    color: wheat;
+    height: 50px;
+    width: 90px;
+    font-family: cursive;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin: 2rem;
-    gap: 1rem;
+    justify-content: center;
+    font-size: 30px;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
-header h1{
-    font-size: 2.5rem;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
+a:hover{
+    background-color: rgb(177, 112, 181);
+    border-radius: 10px;
 }
-header p{
-    font-size: 1.2rem;
-    text-align: center;
-    max-width: 600px;
-    word-spacing: 2px;
+.para1{
+    font-size: 30px;
+    margin: 20px;
 }
-div{
+span:hover{
+    background-color:  #03DAC6;
+    border-radius: 10px;
+    color: black;
+}
+.container {
+    position: relative;
+    width: 80%;
+}
+.image-container {
     display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    gap: 2rem;
-    margin: 2rem;
-    margin-top: 5rem;
-    margin-left: 7rem;
+    flex-direction: row;
+    gap: 5px;
 }
-div h2{
-    font-size: 2rem;
-    font-weight: 600;
-    margin-bottom: 1rem;
-    padding: 0.5rem;
-    border-radius: 5px;
-    width: 13rem;
-    text-align: center;
-    transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+.image-container img {
+    width: 100%;
+    height: auto;
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
 }
-div h2:hover{
-    background-color: salmon;
-    color: saddlebrown;
-    
+.container:hover img {
+    filter: blur(5px);
+    opacity: 0.5;
 }
-div p{
-    font-size: 1.2rem;
-    line-height: 1.5;
-    margin-left: 1rem;
+.image-container img:hover {
+    width: 100%;
+    filter: blur(0);
+    opacity: 1;
+    transform: scale(1.1);
+    z-index: 2;
+    position: relative;
+}
+h2{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    text-transform: uppercase;
+    text-decoration: double underline;
+}
+li{
+    font-weight: 200;
+    font-size: 20px;
+    padding-left: 20px;
+}
+h3{
+    font-size: 25px;
+}
+p{
+    display: flex;
+    justify-content: center;
 }
